--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "javascript30",
   "version": "1.0.0",
-  "description": "- Curso de javascript30",
+  "description": "- Exercícios em HTML,CSS e JS",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
